--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
+    "codegen:dhedge": "npm run codegen -- subgraphs/dhedge.yaml",
+    "codegen:rates": "npm run codegen -- subgraphs/rates.yaml",
     "build": "graph build",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ dhedge/dhedge",
     "create-local": "graph create --node http://localhost:8020/ dhedge/dhedge",
