--- a/dhedge.yaml
+++ b/dhedge.yaml
@@ -1732,6 +1732,131 @@ dataSources:
         - event: AnswerUpdated(indexed int256,indexed uint256,uint256)
           handler: handleAggregatorAnswerUpdated
 
+  - kind: ethereum/contract
+    name: AggregatorYFI_3
+    network: mainnet
+    source:
+      address: '0xAec0D77fdD6a2a34EC3eaF915260496Ae27f9D25' # YFI_3
+      abi: Aggregator
+      startBlock: 11322433
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/rates-mapping.ts
+      entities:
+        - AggregatorAnswer
+      abis:
+        - name: Aggregator
+          file: ./abis/Aggregator.json
+        - name: ExchangeRates
+          file: ./abis/ExchangeRates.json
+        - name: AddressResolver
+          file: ./abis/AddressResolver.json
+      eventHandlers:
+        - event: AnswerUpdated(indexed int256,indexed uint256,uint256)
+          handler: handleAggregatorAnswerUpdated
+
+  - kind: ethereum/contract
+    name: AggregatorAAVE_3
+    network: mainnet
+    source:
+      address: '0xF2d87E37EA1e54c7Aa913d2447A5f69f61C114Cf' # AAVE_3
+      abi: Aggregator
+      startBlock: 11179792
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/rates-mapping.ts
+      entities:
+        - AggregatorAnswer
+      abis:
+        - name: Aggregator
+          file: ./abis/Aggregator.json
+        - name: ExchangeRates
+          file: ./abis/ExchangeRates.json
+        - name: AddressResolver
+          file: ./abis/AddressResolver.json
+      eventHandlers:
+        - event: AnswerUpdated(indexed int256,indexed uint256,uint256)
+          handler: handleAggregatorAnswerUpdated
+
+  - kind: ethereum/contract
+    name: AggregatorDOT_3
+    network: mainnet
+    source:
+      address: '0x8640798469204DBbAd5842f8688B152c510F7777' #DOT_3
+      abi: Aggregator
+      startBlock: 11322483
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/rates-mapping.ts
+      entities:
+        - AggregatorAnswer
+      abis:
+        - name: Aggregator
+          file: ./abis/Aggregator.json
+        - name: ExchangeRates
+          file: ./abis/ExchangeRates.json
+        - name: AddressResolver
+          file: ./abis/AddressResolver.json
+      eventHandlers:
+        - event: AnswerUpdated(indexed int256,indexed uint256,uint256)
+          handler: handleAggregatorAnswerUpdated
+
+  - kind: ethereum/contract
+    name: AggregatorUNI_3
+    network: mainnet
+    source:
+      address: '0x5B0e9Ff11aae806067787d380967900551919c0D' # UNI_3
+      abi: Aggregator
+      startBlock: 11322507
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/rates-mapping.ts
+      entities:
+        - AggregatorAnswer
+      abis:
+        - name: Aggregator
+          file: ./abis/Aggregator.json
+        - name: ExchangeRates
+          file: ./abis/ExchangeRates.json
+        - name: AddressResolver
+          file: ./abis/AddressResolver.json
+      eventHandlers:
+        - event: AnswerUpdated(indexed int256,indexed uint256,uint256)
+          handler: handleAggregatorAnswerUpdated
+
+  - kind: ethereum/contract
+    name: AggregatorTesla_3
+    network: mainnet
+    source:
+      address: '0x21CBd7098bf18F293fbF5451Be2Fc968EAA1e072' # Tesla_3
+      abi: Aggregator
+      startBlock: 11791363
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/rates-mapping.ts
+      entities:
+        - AggregatorAnswer
+      abis:
+        - name: Aggregator
+          file: ./abis/Aggregator.json
+        - name: ExchangeRates
+          file: ./abis/ExchangeRates.json
+        - name: AddressResolver
+          file: ./abis/AddressResolver.json
+      eventHandlers:
+        - event: AnswerUpdated(indexed int256,indexed uint256,uint256)
+          handler: handleAggregatorAnswerUpdated
+
 templates:
   - kind: ethereum/contract
     name: DHedge
